--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "build:precommit": "yarn run dev && :"
   },
+  "peerDependencies": {
+    "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
+    "graphql-tag": "^2.0.0"
+  },
   "dependencies": {
-    "@graphql-codegen/plugin-helpers": "1.17.8",
-    "graphql": "15.3.0",
-    "liquidjs": "9.15.0"
+    "@graphql-codegen/plugin-helpers": "^1.17.8",
+    "liquidjs": "^9.15.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.17.8",
@@ -24,6 +27,7 @@
     "@typescript-eslint/parser": "3.10.1",
     "eslint": "7.7.0",
     "eslint-plugin-import": "2.22.0",
+    "graphql": "^15.5.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.12",
     "prettier": "2.1.0",
