--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-codegen-golang",
+  "name": "@jaredpalmer/graphql-codegen-golang",
   "description": "Graphql Code Generator plugin for generating Golang",
   "scripts": {
     "dev": "yarn run build && yarn run codegen",
@@ -86,5 +86,8 @@
     "graphql-codegen",
     "graphql",
     "golang"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
