--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "liquidjs": "^9.15.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.17.8",
-    "@graphql-inspector/cli": "2.2.0",
-    "@graphql-tools/utils": "6.1.0",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
-    "eslint": "7.7.0",
-    "eslint-plugin-import": "2.22.0",
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-inspector/cli": "^2.2.0",
+    "@graphql-tools/utils": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
+    "eslint-plugin-import": "^2.22.0",
     "graphql": "^15.5.0",
-    "husky": "4.2.5",
-    "lint-staged": "10.2.12",
-    "prettier": "2.1.0",
-    "typescript": "4.0.2"
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.12",
+    "prettier": "^2.1.0",
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
