--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-inspector/cli": "^2.2.0",
+    "@graphql-inspector/config": "^2.5.0",
     "@graphql-tools/utils": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
