--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "yarn run build && yarn run codegen",
     "build": "tsc",
     "codegen": "yarn graphql-codegen --project rick && yarn graphql-codegen",
-    "test": "go test -v ./pkg/rickandmorty/",
-    "mock": "graphql-inspector serve graphql/schema.graphql",
+    "test": "go test -v ./examples/rickandmorty/",
+    "mock": "graphql-inspector serve examples/schema.graphql",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,yaml,gql,md,html,css}'",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "build:precommit": "yarn run dev && :"
